Bug 125554 - PPTX: FILESAVE: Gradient becomes solid rectangle after RT
Summary: PPTX: FILESAVE: Gradient becomes solid rectangle after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, filter:pptx, regression
Depends on:
Blocks:
 
Reported: 2019-05-28 12:12 UTC by Xisco Faulí
Modified: 2019-09-05 14:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-05-28 12:12:31 UTC
Steps to reproduce:
1. Open attachment 114005 [details] from bug 89926
2. Save it as PPTX
3. Open the new document

-> Gradient is completely black

Reproduced in

Version: 6.3.0.0.alpha1+
Build ID: 69b62cfcbd364d7f62142149c2f690104b217ca1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-05-28 12:13:27 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2019-02-05 09:32:35 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2019-02-05 10:43:30 +0100
commit cfc1f4ea4889f768d689a0df71519e9bcb707bc0 (patch)
tree 07055482cc4e9ea589bec6e2f7570c88f9e80ce8
parent 11a2809e369b2a6fcbb2d7f0db131a945557c6e2 (diff)
oox: disable gradient fill grab-bag for PPTX

Bisected with: bibisect-linux64-6.3

Adding Cc: to Miklos Vajna
Comment 2 Gerald Pfeifer 2019-06-04 13:11:20 UTC
The reproducer does not reproduce for me "as is".  I have to round trip
PPTX -> ODP -> PPTX, then it definitely does happen though.

  Version: 6.2.3.2
  Build ID: 20(Build:2)
  CPU threads: 4; OS: Linux 5.1; UI render: default; VCL: gtk3; 
  Locale: en-US (en_US.UTF-8); UI-Language: en-US
  Calc: threaded
Comment 3 Gerald Pfeifer 2019-06-04 13:15:57 UTC
(Note to self: I believe this is "prior art" for a duplicate I was
otherwise going to open. Once this is hopefully fixed, remind me to
check out round-tripping "What If...".)
Comment 4 Gerald Pfeifer 2019-06-04 13:25:36 UTC
Adjusting summary after testing with a green gradient, since the issue
is not about changing the color to black, but replacing a gradient by a
solidly filled area (of whatever color the gradient had).
Comment 5 Commit Notification 2019-07-02 07:07:53 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/599ae1151bf893491db7ad983d64c77521c3ae9d%5E%21

tdf#125554 PPTX export: handle gradient transparency for gradient fill

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-07-03 11:08:06 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 3cdc1b35b9d86bcfa1277e3e94925ae7b18b8fde
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 7 Xisco Faulí 2019-07-03 11:09:26 UTC
(In reply to Gerald Pfeifer from comment #2)
> The reproducer does not reproduce for me "as is".  I have to round trip
> PPTX -> ODP -> PPTX, then it definitely does happen though.
> 
>   Version: 6.2.3.2
>   Build ID: 20(Build:2)
>   CPU threads: 4; OS: Linux 5.1; UI render: default; VCL: gtk3; 
>   Locale: en-US (en_US.UTF-8); UI-Language: en-US
>   Calc: threaded

I think that is another issue. Please try again with a recent master build from http://dev-builds.libreoffice.org/daily/master/ and if you can still reproduce it, please report it in a new bug.
Thanks in advance
Comment 8 Commit Notification 2019-07-03 12:46:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/1e8a9c19a6f7b82c9e0c481aee0c04c0780f4433%5E%21

tdf#125554 PPTX export: handle gradient transparency for gradient fill

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gerald Pfeifer 2019-07-08 20:27:08 UTC
(In reply to Xisco Faulí from comment #7)
> (In reply to Gerald Pfeifer from comment #2)
>> The reproducer does not reproduce for me "as is".  I have to round trip
>> PPTX -> ODP -> PPTX, then it definitely does happen though. 
> I think that is another issue. Please try again with a recent master build
> from http://dev-builds.libreoffice.org/daily/master/ and if you can still
> reproduce it, please report it in a new bug.
> Thanks in advance

With

  Version: 6.4.0.0.alpha0+
  Build ID: 99ec957948ce3af0c40e9cb1560e2de59fbc8912
  CPU threads: 4; OS: Linux 5.1; UI render: default; VCL: gtk3; 
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time:2019-07-04_19:35:06

everything works fine for me, including that other issue I mentioned
(which may or may not have had the same root cause).

Thank you for the pointers, Xisco!  Very useful and noted also for the
future.